# PrivateLSTM

./: .gitignore  CMakeLists.txt  README.md
data/: center0.csv  center2.csv
src/: global.cpp  global.h  lstm.cpp  lstm.h  matrix.cpp  mulgate.cpp  plainmatrix.h  share.cpp  triples.cpp  triplescheck.h
